fix wrap works + padding homepage mobile

--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -76,9 +76,3 @@
     height: 90px;
   }
 }
-
-@media (max-width: 420px) {
-  .home {
-    padding-bottom: 4rem;
-  }
-}
