--- a/scss/pages/realisation/_works.scss
+++ b/scss/pages/realisation/_works.scss
@@ -3,13 +3,8 @@
 }
 
 .works {
-  position: absolute;
-  width: 100%;
+  position: relative;
   height: 100vh;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   color: #fff;
   overflow: hidden;
   .works-img {
